# web_gpu_app

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  app.cpp  app.h  main.cpp  renderer.cpp  renderer.h  triangle_app.cpp  triangle_app.h  ui.cpp  ui.h  ui_themes.h  utils.h  web_gpu_app.cpp  web_gpu_app.h  web_gpu_renderer.cpp  web_gpu_renderer.h
.github/workflows/: cmake-multi-platform.yml
docs/: index.html  triangle_app.js
shaders/: shader.wgsl
src/examples/triangle_app/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
src/web_gpu_app/: CMakeLists.txt  app.cpp  shell.html  shell_game.html  ui.cpp  web_gpu_renderer.cpp
src/web_gpu_app/include/web_gpu_app/: app.h  renderer.h  web_gpu_renderer.h
